@@ -2,6 +2,8 @@ lintian-brush (0.39) UNRELEASED; urgency=medium
 
   * Set somewhat more aggressive timeout for HTTP requests.
   * Properly cope with trailing commas when adding dependencies.
+  * Replace spaces with dashes in license ids, for all SPDX license
+    names. Closes: #942722
 
  -- Jelmer Vernooĳ <jelmer@debian.org>  Sat, 19 Oct 2019 15:50:25 +0000
 
